--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/supabase-js": "^2.39.3",
     "g": "^2.0.1",
     "json-server": "^1.0.0-alpha.21",
     "next": "14.0.4",
