--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
