--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-server": "^1.0.0-alpha.21",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
